--- a/configmap.yaml
+++ b/configmap.yaml
@@ -6,6 +6,6 @@ data:
   index.html: |
     <html>
     <head><title>Hello World</title></head>
-    <body><h1>Hello World from Minikube!</h1></body>
+    <body><h1>Hello World from Minikube!- cyther</h1></body>
     </html>
 
