--- a/configmap.yaml
+++ b/configmap.yaml
@@ -6,6 +6,6 @@ data:
   index.html: |
     <html>
     <head><title>Hello K8s</title></head>
-    <body><hr><h2>Hello K8s from Minikube!</h2><hr><hr></body>
+    <body><hr><h2>K8s from Minikube!</h2><hr><hr></body>
     </html>
 
