--- a/k8s/overlays/dev/replica-patch.yaml
+++ b/k8s/overlays/dev/replica-patch.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-world
+  labels:
+    app: hello-world
 spec:
-  replicas: 1
+  replicas: 5
 
