--- a/k8s/overlays/staging/kustomization.yaml
+++ b/k8s/overlays/staging/kustomization.yaml
@@ -1,6 +1,7 @@
-bases:
-  - ../../base
 namePrefix: staging-
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+resources:
+- ../../base
 patches:
-  - replica-patch.yaml
-
+- path: replica-patch.yaml
