--- a/k8s/overlays/staging/replica-patch.yaml
+++ b/k8s/overlays/staging/replica-patch.yaml
@@ -1,8 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-world
-  labels:
-    app: hello-world
+  name: hello-world-deployment
 spec:
-  replicas: 1
+  replicas: 3
+
