added configmap generator

--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -20,5 +20,5 @@ spec:
       volumes:
       - name: hello-world-html
         configMap:
-          name: hello-world-config
+          name: htmldata
 
