--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -5,3 +5,7 @@ resources:
 - ../../base
 patches:
 - path: replica-patch.yaml
+
+configMapGenerator:
+  - name: htmldata
+    env: config.properties
