--- a/k8s/overlays/prod/config.properties
+++ b/k8s/overlays/prod/config.properties
@@ -1,6 +1,2 @@
-  index.html = 
-    <html>
-    <head><title>Prod K8s</title></head>
-    <body><hr><h2>K8s from Minikube PROD Env!</h2><hr><hr></body>
-    </html>
+  index.html=<html><head><title>Prod K8s</title></head><body><hr><h2>K8s from Minikube PROD Env!</h2><hr><hr></body></html>
 
