html data update

--- a/k8s/overlays/dev/config.properties
+++ b/k8s/overlays/dev/config.properties
@@ -1,2 +1,2 @@
-  index.html=<html><head><title>Dev K8s</title></head><body><hr><h2>K8s from Minikube DEV Env!</h2><hr><hr></body></html>
+  index.html=<html><head><title>Dev K8s!!!</title></head><body><hr><h2>K8s from Minikube DEV Env!</h2><hr><hr></body></html>
 
