--- a/argocd-apps/prod.yaml
+++ b/argocd-apps/prod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: hello-world-prod
   namespace: argocd
 spec:
-  project: default
+  project: hello-world-prod
   source:
     repoURL: 'https://github.com/gauthamp10/hello-k8s.git'
     targetRevision: HEAD
