--- a/argocd-apps/staging.yaml
+++ b/argocd-apps/staging.yaml
@@ -4,7 +4,7 @@ metadata:
   name: hello-world-staging
   namespace: argocd
 spec:
-  project: hello-world-staging
+  project: default
   source:
     repoURL: 'https://github.com/gauthamp10/hello-k8s.git'
     targetRevision: HEAD
